--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
             <version>4.11</version>
             <scope>compile</scope>
         </dependency>
+        <!--  google guava-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0</version>
+        </dependency>
     </dependencies>
 
     <build>
