去掉了google guava的依赖，因为github说有安全漏洞？？？

--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,11 @@
             <scope>compile</scope>
         </dependency>
         <!--  google guava-->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>20.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.google.guava</groupId>-->
+<!--            <artifactId>guava</artifactId>-->
+<!--            <version>20.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
