--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,11 @@
             <version>20200518</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.15</version>
+        </dependency>
 
     </dependencies>
 
